<resources>
    <string name="app_name">Appointment Booker</string>
    <string name="login_title">Login</string>
    <string name="signup_title">Registration</string>
    <string name="email_title" translatable="false">Email</string>
    <string name="first_name_title">First Name</string>
    <string name="last_name_title">Last Name</string>
    <string name="password_title">Password</string>
    <string name="password_confirmation_title">Password confirmation</string>
    <string name="login_btn_title">Login</string>
    <string name="signup_btn_title">Sign Up</string>
    <string name="login_head_text">Log in for book a hair appointment</string>
    <string name="all_fields_required_msg">All fields are required!</string>
    <string name="wrong_email_or_password_msg">Email or password is wrong!</string>
    <string name="forget_password_title">Forget Password</string>
    <string name="no_registered_title">Don\'t have account?</string>
    <string name="phone_title">Phone</string>
    <string name="registered_title">You have account?</string>
    <string name="two_passwords_arent_same_msg">Two passwords aren\'t same!</string>
    <string name="user_exists_msg">This email already exits!</string>
    <string name="signup_error">Error!</string>
    <string name="signup_successful">Successful registration!</string>
    <string name="home_title">Home</string>
    <string name="nav_bar_appointments_title">Appointments</string>
    <string name="nav_bar_booked_appointments">Booked Appointments</string>
    <string name="nav_bar_account_title">Account</string>
    <string name="nav_bar_contact_title">Contact</string>
    <string name="save_btn_title">Save</string>
    <string name="successful_save_userinfo">Successful update!</string>
    <string name="unsuccessful_save_userinfo">Unsuccessful update!</string>
    <string name="user_data_page">User data</string>
    <string name="successful_upload_picture">Successful upload profile image!</string>
    <string name="unsuccessful_upload_picture">Unsuccessful upload profile image!</string>
    <string name="logout_btn">Logout</string>
    <string name="appointments_title">Appointments</string>
    <string name="book_btn">Book</string>
    <string name="cancle_btn">Cancel</string>
    <string name="choose_service">Choose service</string>
    <string name="contact_information_title">Contact</string>
    <string name="contact_phone_title">Phone:</string>
    <string name="contact_email_title" translatable="false">Email:</string>
    <string name="contact_address_title">Address:</string>
    <string name="add_new_appointment">New appointment</string>
    <string name="add_appointment_title">Add Appointment</string>
    <string name="date_title">Date</string>
    <string name="period_title">Period</string>
    <string name="add_btn">Add</string>
    <string name="set_btn">Set</string>
    <string name="successful_add">Successful addition</string>
    <string name="failed_add">Failed to add</string>
    <string name="wrong_date">The specified date is older than the current date!</string>
    <string name="appointment_exists">There is already an appointment for this time.</string>
    <string name="booking_btn">Booking</string>
    <string name="delete_btn_title">Delete</string>
    <string name="view_btn_title">View</string>
    <string name="information_title">Information</string>
    <string name="info_name_title">Name:</string>
    <string name="info_phone_title">Phone:</string>
    <string name="info_email_title" translatable="false">Email:</string>
    <string name="deletion_confirm_title">Are you sure you want to cancel the appointment?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="deletion_title">Deletion</string>
    <string name="successful_deletion">Successful deletion</string>
    <string name="unsuccessful_deletion">Failed to delete</string>
    <string name="cancel_title">Cancel</string>
    <string name="cancel_question">Are you sure to cancel the appointment?</string>
    <string name="successful_cancel">Successfull cancelation!</string>
    <string name="unsuccessful_cancel">Faild to cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>